# CBE423

./: pyproject.toml  requirements.txt
1/: 1.ipynb  opt2.traj  opt3.traj
2/: 2.html  2.ipynb
2/problem_1/: 2.ipynb  problem1.py
2/problem_2/: n2orca.out  n3orca.out  n6orca.out  n6tsorca.out  orca.inp
4/: 4.html  4.ipynb  mg_mof74_co2.cif  mg_mof74_co2_relaxed.cif
