[project]
name = "cbe423"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.28.0",
    "ipykernel>=7.2.0",
    "torch>=2.5.1",
    "torch-dftd>=0.5.3",
    "upet>=0.2.1",
]

[[tool.uv.index]]
name = "pytorch-cu121" 
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
